Final outputs for project submission for tv script gen

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -224,11 +224,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'helper' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-abdaf84b69a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \"\"\"\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Preprocess Training, Validation, and Testing Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mhelper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocess_and_save_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoken_lookup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_lookup_tables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'helper' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -248,9 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -285,23 +293,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.6.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/envs/tv_script_generation/lib/python3.6/site-packages/ipykernel_launcher.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
-      "  \n"
+      "TensorFlow Version: 1.3.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -340,9 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -387,9 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -433,9 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -483,9 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -533,9 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -616,10 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -713,26 +700,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 4\n",
+    "num_epochs = 250\n",
     "# Batch Size\n",
-    "batch_size = 128\n",
+    "batch_size = 512\n",
     "# RNN Size\n",
-    "rnn_size = 100\n",
+    "rnn_size = 400\n",
     "# Embedding Dimension Size\n",
-    "embed_dim = 300\n",
+    "embed_dim = 256\n",
     "# Sequence Length\n",
-    "seq_length = 5\n",
+    "seq_length = 10\n",
     "# Learning Rate\n",
-    "learning_rate = 3e-4\n",
+    "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 10\n",
+    "show_every_n_batches = 20\n",
+    "\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -750,10 +736,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -797,58 +781,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/107   train_loss = 8.822\n",
-      "Epoch   0 Batch   10/107   train_loss = 8.817\n",
-      "Epoch   0 Batch   20/107   train_loss = 8.810\n",
-      "Epoch   0 Batch   30/107   train_loss = 8.791\n",
-      "Epoch   0 Batch   40/107   train_loss = 8.746\n",
-      "Epoch   0 Batch   50/107   train_loss = 8.556\n",
-      "Epoch   0 Batch   60/107   train_loss = 8.106\n",
-      "Epoch   0 Batch   70/107   train_loss = 7.504\n",
-      "Epoch   0 Batch   80/107   train_loss = 7.131\n",
-      "Epoch   0 Batch   90/107   train_loss = 6.847\n",
-      "Epoch   0 Batch  100/107   train_loss = 6.613\n",
-      "Epoch   1 Batch    3/107   train_loss = 6.451\n",
-      "Epoch   1 Batch   13/107   train_loss = 6.358\n",
-      "Epoch   1 Batch   23/107   train_loss = 6.348\n",
-      "Epoch   1 Batch   33/107   train_loss = 6.268\n",
-      "Epoch   1 Batch   43/107   train_loss = 6.292\n",
-      "Epoch   1 Batch   53/107   train_loss = 6.250\n",
-      "Epoch   1 Batch   63/107   train_loss = 6.155\n",
-      "Epoch   1 Batch   73/107   train_loss = 6.300\n",
-      "Epoch   1 Batch   83/107   train_loss = 6.014\n",
-      "Epoch   1 Batch   93/107   train_loss = 6.304\n",
-      "Epoch   1 Batch  103/107   train_loss = 6.278\n",
-      "Epoch   2 Batch    6/107   train_loss = 6.069\n",
-      "Epoch   2 Batch   16/107   train_loss = 6.169\n",
-      "Epoch   2 Batch   26/107   train_loss = 6.293\n",
-      "Epoch   2 Batch   36/107   train_loss = 6.037\n",
-      "Epoch   2 Batch   46/107   train_loss = 6.105\n",
-      "Epoch   2 Batch   56/107   train_loss = 5.978\n",
-      "Epoch   2 Batch   66/107   train_loss = 5.984\n",
-      "Epoch   2 Batch   76/107   train_loss = 6.007\n",
-      "Epoch   2 Batch   86/107   train_loss = 5.878\n",
-      "Epoch   2 Batch   96/107   train_loss = 6.133\n",
-      "Epoch   2 Batch  106/107   train_loss = 6.086\n",
-      "Epoch   3 Batch    9/107   train_loss = 6.017\n",
-      "Epoch   3 Batch   19/107   train_loss = 6.178\n",
-      "Epoch   3 Batch   29/107   train_loss = 6.179\n",
-      "Epoch   3 Batch   39/107   train_loss = 6.031\n",
-      "Epoch   3 Batch   49/107   train_loss = 6.061\n",
-      "Epoch   3 Batch   59/107   train_loss = 6.024\n",
-      "Epoch   3 Batch   69/107   train_loss = 6.103\n",
-      "Epoch   3 Batch   79/107   train_loss = 6.042\n",
-      "Epoch   3 Batch   89/107   train_loss = 6.223\n",
-      "Epoch   3 Batch   99/107   train_loss = 6.090\n",
+      "Epoch   0 Batch    0/13   train_loss = 8.822\n",
+      "Epoch   1 Batch    7/13   train_loss = 6.119\n",
+      "Epoch   3 Batch    1/13   train_loss = 5.984\n",
+      "Epoch   4 Batch    8/13   train_loss = 5.789\n",
+      "Epoch   6 Batch    2/13   train_loss = 5.434\n",
+      "Epoch   7 Batch    9/13   train_loss = 4.989\n",
+      "Epoch   9 Batch    3/13   train_loss = 4.621\n",
+      "Epoch  10 Batch   10/13   train_loss = 4.435\n",
+      "Epoch  12 Batch    4/13   train_loss = 4.226\n",
+      "Epoch  13 Batch   11/13   train_loss = 4.202\n",
+      "Epoch  15 Batch    5/13   train_loss = 3.933\n",
+      "Epoch  16 Batch   12/13   train_loss = 3.853\n",
+      "Epoch  18 Batch    6/13   train_loss = 3.706\n",
+      "Epoch  20 Batch    0/13   train_loss = 3.507\n",
+      "Epoch  21 Batch    7/13   train_loss = 3.403\n",
+      "Epoch  23 Batch    1/13   train_loss = 3.253\n",
+      "Epoch  24 Batch    8/13   train_loss = 3.191\n",
+      "Epoch  26 Batch    2/13   train_loss = 3.182\n",
+      "Epoch  27 Batch    9/13   train_loss = 3.088\n",
+      "Epoch  29 Batch    3/13   train_loss = 2.791\n",
+      "Epoch  30 Batch   10/13   train_loss = 2.598\n",
+      "Epoch  32 Batch    4/13   train_loss = 2.571\n",
+      "Epoch  33 Batch   11/13   train_loss = 2.525\n",
+      "Epoch  35 Batch    5/13   train_loss = 2.422\n",
+      "Epoch  36 Batch   12/13   train_loss = 2.320\n",
+      "Epoch  38 Batch    6/13   train_loss = 2.312\n",
+      "Epoch  40 Batch    0/13   train_loss = 2.106\n",
+      "Epoch  41 Batch    7/13   train_loss = 2.164\n",
+      "Epoch  43 Batch    1/13   train_loss = 2.014\n",
+      "Epoch  44 Batch    8/13   train_loss = 1.955\n",
+      "Epoch  46 Batch    2/13   train_loss = 1.820\n",
+      "Epoch  47 Batch    9/13   train_loss = 1.770\n",
+      "Epoch  49 Batch    3/13   train_loss = 1.673\n",
+      "Epoch  50 Batch   10/13   train_loss = 1.499\n",
+      "Epoch  52 Batch    4/13   train_loss = 1.565\n",
+      "Epoch  53 Batch   11/13   train_loss = 1.510\n",
+      "Epoch  55 Batch    5/13   train_loss = 1.381\n",
+      "Epoch  56 Batch   12/13   train_loss = 1.304\n",
+      "Epoch  58 Batch    6/13   train_loss = 1.335\n",
+      "Epoch  60 Batch    0/13   train_loss = 1.122\n",
+      "Epoch  61 Batch    7/13   train_loss = 1.127\n",
+      "Epoch  63 Batch    1/13   train_loss = 1.079\n",
+      "Epoch  64 Batch    8/13   train_loss = 1.059\n",
+      "Epoch  66 Batch    2/13   train_loss = 1.004\n",
+      "Epoch  67 Batch    9/13   train_loss = 1.011\n",
+      "Epoch  69 Batch    3/13   train_loss = 0.936\n",
+      "Epoch  70 Batch   10/13   train_loss = 0.850\n",
+      "Epoch  72 Batch    4/13   train_loss = 0.884\n",
+      "Epoch  73 Batch   11/13   train_loss = 0.810\n",
+      "Epoch  75 Batch    5/13   train_loss = 0.776\n",
+      "Epoch  76 Batch   12/13   train_loss = 0.735\n",
+      "Epoch  78 Batch    6/13   train_loss = 0.759\n",
+      "Epoch  80 Batch    0/13   train_loss = 0.692\n",
+      "Epoch  81 Batch    7/13   train_loss = 0.708\n",
+      "Epoch  83 Batch    1/13   train_loss = 0.696\n",
+      "Epoch  84 Batch    8/13   train_loss = 0.682\n",
+      "Epoch  86 Batch    2/13   train_loss = 0.681\n",
+      "Epoch  87 Batch    9/13   train_loss = 0.748\n",
+      "Epoch  89 Batch    3/13   train_loss = 0.775\n",
+      "Epoch  90 Batch   10/13   train_loss = 0.757\n",
+      "Epoch  92 Batch    4/13   train_loss = 0.880\n",
+      "Epoch  93 Batch   11/13   train_loss = 0.844\n",
+      "Epoch  95 Batch    5/13   train_loss = 0.880\n",
+      "Epoch  96 Batch   12/13   train_loss = 0.908\n",
+      "Epoch  98 Batch    6/13   train_loss = 0.867\n",
+      "Epoch 100 Batch    0/13   train_loss = 0.743\n",
+      "Epoch 101 Batch    7/13   train_loss = 0.704\n",
+      "Epoch 103 Batch    1/13   train_loss = 0.592\n",
+      "Epoch 104 Batch    8/13   train_loss = 0.534\n",
+      "Epoch 106 Batch    2/13   train_loss = 0.484\n",
+      "Epoch 107 Batch    9/13   train_loss = 0.486\n",
+      "Epoch 109 Batch    3/13   train_loss = 0.463\n",
+      "Epoch 110 Batch   10/13   train_loss = 0.432\n",
+      "Epoch 112 Batch    4/13   train_loss = 0.451\n",
+      "Epoch 113 Batch   11/13   train_loss = 0.442\n",
+      "Epoch 115 Batch    5/13   train_loss = 0.419\n",
+      "Epoch 116 Batch   12/13   train_loss = 0.409\n",
+      "Epoch 118 Batch    6/13   train_loss = 0.439\n",
+      "Epoch 120 Batch    0/13   train_loss = 0.400\n",
+      "Epoch 121 Batch    7/13   train_loss = 0.432\n",
+      "Epoch 123 Batch    1/13   train_loss = 0.424\n",
+      "Epoch 124 Batch    8/13   train_loss = 0.422\n",
+      "Epoch 126 Batch    2/13   train_loss = 0.428\n",
+      "Epoch 127 Batch    9/13   train_loss = 0.438\n",
+      "Epoch 129 Batch    3/13   train_loss = 0.419\n",
+      "Epoch 130 Batch   10/13   train_loss = 0.389\n",
+      "Epoch 132 Batch    4/13   train_loss = 0.401\n",
+      "Epoch 133 Batch   11/13   train_loss = 0.386\n",
+      "Epoch 135 Batch    5/13   train_loss = 0.376\n",
+      "Epoch 136 Batch   12/13   train_loss = 0.362\n",
+      "Epoch 138 Batch    6/13   train_loss = 0.387\n",
+      "Epoch 140 Batch    0/13   train_loss = 0.345\n",
+      "Epoch 141 Batch    7/13   train_loss = 0.372\n",
+      "Epoch 143 Batch    1/13   train_loss = 0.372\n",
+      "Epoch 144 Batch    8/13   train_loss = 0.368\n",
+      "Epoch 146 Batch    2/13   train_loss = 0.368\n",
+      "Epoch 147 Batch    9/13   train_loss = 0.373\n",
+      "Epoch 149 Batch    3/13   train_loss = 0.364\n",
+      "Epoch 150 Batch   10/13   train_loss = 0.351\n",
+      "Epoch 152 Batch    4/13   train_loss = 0.364\n",
+      "Epoch 153 Batch   11/13   train_loss = 0.362\n",
+      "Epoch 155 Batch    5/13   train_loss = 0.358\n",
+      "Epoch 156 Batch   12/13   train_loss = 0.346\n",
+      "Epoch 158 Batch    6/13   train_loss = 0.370\n",
+      "Epoch 160 Batch    0/13   train_loss = 0.331\n",
+      "Epoch 161 Batch    7/13   train_loss = 0.359\n",
+      "Epoch 163 Batch    1/13   train_loss = 0.358\n",
+      "Epoch 164 Batch    8/13   train_loss = 0.354\n",
+      "Epoch 166 Batch    2/13   train_loss = 0.359\n",
+      "Epoch 167 Batch    9/13   train_loss = 0.362\n",
+      "Epoch 169 Batch    3/13   train_loss = 0.354\n",
+      "Epoch 170 Batch   10/13   train_loss = 0.342\n",
+      "Epoch 172 Batch    4/13   train_loss = 0.354\n",
+      "Epoch 173 Batch   11/13   train_loss = 0.353\n",
+      "Epoch 175 Batch    5/13   train_loss = 0.351\n",
+      "Epoch 176 Batch   12/13   train_loss = 0.340\n",
+      "Epoch 178 Batch    6/13   train_loss = 0.362\n",
+      "Epoch 180 Batch    0/13   train_loss = 0.324\n",
+      "Epoch 181 Batch    7/13   train_loss = 0.353\n",
+      "Epoch 183 Batch    1/13   train_loss = 0.352\n",
+      "Epoch 184 Batch    8/13   train_loss = 0.348\n",
+      "Epoch 186 Batch    2/13   train_loss = 0.354\n",
+      "Epoch 187 Batch    9/13   train_loss = 0.358\n",
+      "Epoch 189 Batch    3/13   train_loss = 0.349\n",
+      "Epoch 190 Batch   10/13   train_loss = 0.338\n",
+      "Epoch 192 Batch    4/13   train_loss = 0.350\n",
+      "Epoch 193 Batch   11/13   train_loss = 0.350\n",
+      "Epoch 195 Batch    5/13   train_loss = 0.348\n",
+      "Epoch 196 Batch   12/13   train_loss = 0.337\n",
+      "Epoch 198 Batch    6/13   train_loss = 0.358\n",
+      "Epoch 200 Batch    0/13   train_loss = 0.321\n",
+      "Epoch 201 Batch    7/13   train_loss = 0.349\n",
+      "Epoch 203 Batch    1/13   train_loss = 0.349\n",
+      "Epoch 204 Batch    8/13   train_loss = 0.345\n",
+      "Epoch 206 Batch    2/13   train_loss = 0.352\n",
+      "Epoch 207 Batch    9/13   train_loss = 0.356\n",
+      "Epoch 209 Batch    3/13   train_loss = 0.347\n",
+      "Epoch 210 Batch   10/13   train_loss = 0.336\n",
+      "Epoch 212 Batch    4/13   train_loss = 0.347\n",
+      "Epoch 213 Batch   11/13   train_loss = 0.347\n",
+      "Epoch 215 Batch    5/13   train_loss = 0.346\n",
+      "Epoch 216 Batch   12/13   train_loss = 0.335\n",
+      "Epoch 218 Batch    6/13   train_loss = 0.356\n",
+      "Epoch 220 Batch    0/13   train_loss = 0.320\n",
+      "Epoch 221 Batch    7/13   train_loss = 0.348\n",
+      "Epoch 223 Batch    1/13   train_loss = 0.347\n",
+      "Epoch 224 Batch    8/13   train_loss = 0.344\n",
+      "Epoch 226 Batch    2/13   train_loss = 0.350\n",
+      "Epoch 227 Batch    9/13   train_loss = 0.354\n",
+      "Epoch 229 Batch    3/13   train_loss = 0.345\n",
+      "Epoch 230 Batch   10/13   train_loss = 0.334\n",
+      "Epoch 232 Batch    4/13   train_loss = 0.346\n",
+      "Epoch 233 Batch   11/13   train_loss = 0.346\n",
+      "Epoch 235 Batch    5/13   train_loss = 0.345\n",
+      "Epoch 236 Batch   12/13   train_loss = 0.334\n",
+      "Epoch 238 Batch    6/13   train_loss = 0.355\n",
+      "Epoch 240 Batch    0/13   train_loss = 0.318\n",
+      "Epoch 241 Batch    7/13   train_loss = 0.346\n",
+      "Epoch 243 Batch    1/13   train_loss = 0.346\n",
+      "Epoch 244 Batch    8/13   train_loss = 0.342\n",
+      "Epoch 246 Batch    2/13   train_loss = 0.350\n",
+      "Epoch 247 Batch    9/13   train_loss = 0.354\n",
+      "Epoch 249 Batch    3/13   train_loss = 0.345\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -919,10 +1021,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -954,10 +1054,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -998,10 +1096,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1037,17 +1133,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from ./save\n",
-      "moe_szyslak:........................................................................................................................................................................................................\n"
+      "moe_szyslak:(into phone) gotcha ya down for forty bucks, i can love this.\n",
+      "betty:(confused) oh, are that business in the way, moe!\n",
+      "moe_szyslak:(sing) don't you like to thank me.\n",
+      "barney_gumble:(reading) guys. i'm supposed to be unbelievably i'm here to help me.\n",
+      "homer_simpson:(singing) na things.\n",
+      "moe_szyslak: oh, right, i'm reading the old spit.\n",
+      "homer_simpson: oh, you gotta get you this back?\n",
+      "barney_gumble: uh, hey, hey. no kids in me.\n",
+      "homer_simpson:(whiny) hey, moe! oh yeah! look, moe, you might only a ma at things.\n",
+      "lenny_leonard: all the car-- i thought you know... and something that's lisa! whatever me or i'll help you what come in out.\n",
+      "moe_szyslak:(to dog) quiet, huh? like me, moe.(sobs)\n",
+      "\n",
+      "\n",
+      "moe_szyslak: hey, how do i ask you to meet the idea of the expense of?\n",
+      "moe_szyslak:(\n"
      ]
     }
    ],
@@ -1125,7 +1233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "widgets": {
    "state": {},
